--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "lucide-react": "^0.562.0",
+    "mongodb": "^7.0.0",
     "mongoose": "^9.1.3",
     "next": "16.1.1",
     "react": "19.2.3",
